# ma4rom-anonymous

./: .gitignore  FKCompletion_agent.py  README.md  ablation.py  config.py  langgraph_main.py  main.py  pyproject.toml  r2rml_generator.py  requirements.txt  rodi_evaluate.py  run_equiv_op_resume.py  run_my_eval.py  setup_dataset.py
DPMapping/: data_property_mapping_agent.py
OPMapping/: __init__.py
backup/op_mapping_legacy_20260611/: implicit_relation_miner.py  object_property_mapping_agent.py  scenario_judgement.py
backups/cmt_renamed_before_partial_sr_20260527_222958/: llm4vkg_default_mapping_before_partial_sr.ttl
backups/fair_version_A_20260526_231201/: config.py.before_fair_A  langgraph_main.py.before_fair_A  llm4vkg_default_f1_before_fair_A.txt  llm4vkg_default_f1_fair_A.txt  llm4vkg_default_metrics_before_fair_A.json  mamg_cmt_denormalized_fair_A_final_alignment.json  mamg_cmt_denormalized_fair_A_mapping.ttl  (+1 more)
evaluate_results/: error_log.txt
experiments/: context_efficiency_experiment.py  evaluate_op_predictions_from_rodi_qpairs.py  op_equivalence_pattern_experiment.py  rule_based_op_reranker.py  valentine_postgres_match.py
ma4rom/: candidate_generation.py  classify_agent.py  config.py  generated_mapping.ttl
ma4rom/DPMapping/: __init__.py
resources/: ontop-completion.sh
reviews/: 2026-06-21_论文逐项验收报告.md  2026-06-22_15页压缩与全文术语统一方案.md  2026-06-22_全文术语与PDF原文核验.md  2026-06-22_老师讨论后的论文重构方向.md  2026-06-24_论文重构与术语统一执行清单.md  clean_references_bib.py  references.cleaned.bib
utils/: candidate_ranking.py  llm_client.py  llm_set.py  merge_fks.py
(+1332 files in other folders)
